# STUDENTHUB.COM

./: .env  .replit  README_PDF_CONVERTER.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md  tsconfig.json
attached_assets/: Pasted-1-UPSC-Civil-Services-Noti-cation-2025-Released-Description-Union-Public-Service-Commission-an-1753509524931_1753509524932.txt  Pasted-Based-on-my-research-and-analysis-of-your-specific-requirements-for-a-modern-3D-animated-news-porta-1753521555603_1753521555605.txt  Pasted-Build-a-fully-working-PDF-to-Word-Converter-tool-with-the-following-requirements-Backend-Fu-1753457115125_1753457115126.txt  Pasted-Create-a-modern-highly-animated-3D-enabled-news-section-for-a-student-focused-website-with-dark-th-1753507095522_1753507095523.txt  Pasted-Create-a-modern-highly-animated-3D-enabled-news-section-for-a-student-focused-website-with-dark-th-1753507365037_1753507365039.txt  Pasted-Perfect-let-s-now-upgrade-your-entire-website-performance-and-eliminate-lag-or-slow-loading--1753475960543_1753475960544.txt  Pasted-You-are-a-professional-backend-developer-Build-the-complete-backend-code-for-a-fully-working-PDF-t-1753458213877_1753458213877.txt  Pasted-You-are-an-expert-developer-Build-a-fully-working-PDF-to-Word-Converter-Tool-that-does-not-use-any--1753453360368_1753453360369.txt  Pasted-You-are-an-expert-full-stack-developer-Build-a-fully-functional-PDF-to-Word-Converter-Tool-that-e-1753458071818_1753458071820.txt  sachin idea (1)_1753457588675.docx  (+2 more)
client/: index.html
lib/: auth.ts  parsePDF.ts
prisma/: schema.prisma
(+98 files in other folders)
